// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginHeader should render properly 1`] = `
<div>
  <div
    class="w-full bg-theme-background"
    data-testid="plugin-details__header"
  >
    <div
      class="flex w-full"
    >
      <div
        class="PluginImage__PluginImageWrapper-iwox49-0 cSvQPa"
        data-testid="PluginImage__placeholder"
      >
        <svg>
          plugin-logo-placeholder.svg
        </svg>
      </div>
      <div
        class="flex flex-col justify-between pl-8 w-full"
      >
        <div
          class="flex justify-between items-end"
        >
          <div
            class="flex flex-col space-y-2 mr-2 leading-tight"
          >
            <span
              class="text-2xl font-bold"
            >
              Test Plugin
            </span>
            <span
              class="text-medium text-theme-secondary-500"
            />
          </div>
          <div
            class="flex"
          >
            <button
              class="Button__StyledButton-mdtvtf-0 ePkfgQ"
              data-testid="PluginHeader__button--install"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Install
              </div>
            </button>
            <button
              class="Button__StyledButton-mdtvtf-0 iUSBMV ml-3"
              data-testid="PluginHeader__button--report"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                <div
                  class="sc-bdfBwQ iyevwF"
                  height="20"
                  width="20"
                >
                  <svg>
                    report.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          class="Divider-sc-19q4mlo-0 bKsVMa border-theme-secondary-300 dark:border-theme-secondary-800"
          type="horizontal"
        />
        <div
          class="flex justify-between space-4"
        >
          <div
            class="flex space-x-8 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
          >
            <div
              class="flex"
            >
              <div
                class="flex flex-col undefined"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Author
                </span>
                <span
                  class="font-semibold text-theme-secondary-text"
                >
                  <div
                    class="flex items-center"
                  >
                    <span
                      class="font-semibold text-theme-secondary-text"
                    >
                      ARK Ecosystem
                    </span>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="flex pl-8"
            >
              <div
                class="flex flex-col undefined"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Category
                </span>
                <span
                  class="font-semibold text-theme-secondary-text"
                >
                  Utility
                </span>
              </div>
            </div>
            <div
              class="flex pl-8"
            >
              <div
                class="flex flex-col undefined"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  URL
                </span>
                <span
                  class="font-semibold text-theme-secondary-text"
                >
                  <a
                    class="link"
                    data-testid="PluginSpecs__url"
                    href="/"
                  >
                    github.com
                  </a>
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex space-x-8 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
          >
            <div
              class="flex pl-8"
            >
              <div
                class="flex flex-col text-right"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Version
                </span>
                <span
                  class="font-semibold text-theme-secondary-text"
                >
                  1.3.8
                </span>
              </div>
            </div>
            <div
              class="flex pl-8"
            >
              <div
                class="flex flex-col text-right"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Size
                </span>
                <span
                  class="font-semibold text-theme-secondary-text"
                >
                  4.2 Mb
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PluginHeader should render updating plugin 1`] = `
<div>
  <div
    class="w-full bg-theme-background"
    data-testid="plugin-details__header"
  >
    <div
      class="flex w-full"
    >
      <div
        class="PluginImage__PluginImageWrapper-iwox49-0 kKmcXm"
        data-testid="PluginImage__updating"
      >
        <svg
          height="40"
          viewBox="0 0 40 40"
          width="40"
        >
          <circle
            cx="20"
            cy="20"
            fill="transparent"
            r="18.5"
            stroke="var(--theme-color-success-800)"
            stroke-width="3"
          />
          <circle
            cx="20"
            cy="20"
            fill="transparent"
            r="18.5"
            stroke="var(--theme-color-success-600)"
            stroke-dasharray="116.23892818282235"
            stroke-dashoffset="92.99114254625788"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="3"
            transform="rotate(-90 20 20)"
          />
          <text
            data-testid="CircularProgressBar__percentage"
            dy="0.3em"
            fill="var(--theme-color-success-600)"
            font-size="0.8rem"
            font-weight="600"
            text-anchor="middle"
            x="50%"
            y="50%"
          >
            <tspan>
              20
              <tspan
                dy="-0.6em"
                font-size="0.4rem"
                font-weight="bold"
              >
                %
              </tspan>
            </tspan>
          </text>
        </svg>
        <p
          class="text-theme-success-600 text-sm font-semibold"
          data-testid="PluginImage__updating__label"
        >
          Updating...
        </p>
      </div>
      <div
        class="flex flex-col justify-between pl-8 w-full"
      >
        <div
          class="flex justify-between items-end"
        >
          <div
            class="flex flex-col space-y-2 mr-2 leading-tight"
          >
            <span
              class="text-2xl font-bold"
            >
              Test Plugin
            </span>
            <span
              class="text-medium text-theme-secondary-500"
            />
          </div>
          <div
            class="flex"
          >
            <button
              class="Button__StyledButton-mdtvtf-0 ePkfgQ"
              data-testid="PluginHeader__button--install"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Install
              </div>
            </button>
            <button
              class="Button__StyledButton-mdtvtf-0 iUSBMV ml-3"
              data-testid="PluginHeader__button--report"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                <div
                  class="sc-bdfBwQ iyevwF"
                  height="20"
                  width="20"
                >
                  <svg>
                    report.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          class="Divider-sc-19q4mlo-0 bKsVMa border-theme-secondary-300 dark:border-theme-secondary-800"
          type="horizontal"
        />
        <div
          class="flex justify-between space-4"
        >
          <div
            class="flex space-x-8 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
          >
            <div
              class="flex"
            >
              <div
                class="flex flex-col undefined"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Author
                </span>
                <span
                  class="font-semibold text-theme-secondary-text"
                >
                  <div
                    class="flex items-center"
                  >
                    <span
                      class="font-semibold text-theme-secondary-text"
                    >
                      ARK Ecosystem
                    </span>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="flex pl-8"
            >
              <div
                class="flex flex-col undefined"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Category
                </span>
                <span
                  class="font-semibold text-theme-secondary-text"
                >
                  Utility
                </span>
              </div>
            </div>
            <div
              class="flex pl-8"
            >
              <div
                class="flex flex-col undefined"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  URL
                </span>
                <span
                  class="font-semibold text-theme-secondary-text"
                >
                  <a
                    class="link"
                    data-testid="PluginSpecs__url"
                    href="/"
                  >
                    github.com
                  </a>
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex space-x-8 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
          >
            <div
              class="flex pl-8"
            >
              <div
                class="flex flex-col text-right"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Version
                </span>
                <span
                  class="font-semibold text-theme-secondary-text"
                >
                  1.3.8
                </span>
              </div>
            </div>
            <div
              class="flex pl-8"
            >
              <div
                class="flex flex-col text-right"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Size
                </span>
                <span
                  class="font-semibold text-theme-secondary-text"
                >
                  4.2 Mb
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
